It now uses the solr indexing client to communicate with solr achieving a better CQRS model